load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "disk",
    srcs = [
        "linux_parse.go",
        "monitor.go",
        "platform_default.go",
        "platform_linux.go",
        "stats.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/storage/disk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/syncutil",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//vfs",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_pkg_errors//:errors",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_pkg_errors//:errors",
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "disk_test",
    size = "small",
    srcs = ["linux_parse_test.go"],
    args = ["-test.timeout=55s"],
    data = glob(["testdata/**"]),
    embed = [":disk"],
    shard_count = 2,
    deps = [
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "@com_github_cockroachdb_datadriven//:datadriven",
        "@com_github_cockroachdb_pebble//vfs",
        "@com_github_stretchr_testify//require",
    ],
)
